examples/issues/issue_0519_d/expected/production/kubeapp-ns_extensions_v1beta1_deployment_kubeapp-production.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: kubeapp
    env: production
  name: kubeapp-production
  namespace: kubeapp-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubeapp
      env: production
  template:
    metadata:
      labels:
        app: kubeapp
        env: production
      name: kubeapp
    spec:
      containers:
      - image: hack4easy/kubesim_health-amd64:0.1.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /liveness
            port: 8081
        name: kubeapp
        ports:
        - containerPort: 8081
          name: kubeapp
        readinessProbe:
          httpGet:
            path: /readiness
            port: 8081
