examples/issues/issue_0519_d/expected/production/kubeapp-ns_extensions_v1beta1_ingress_kubeapp.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: kubeapp
  name: kubeapp
  namespace: kubeapp-ns
spec:
  backend:
    serviceName: kubeapp-production
    servicePort: 80
